--- a/_redirects/ext_veranstaltungen.html
+++ b/_redirects/ext_veranstaltungen.html
@@ -1,6 +1,6 @@
 ---
 permalink: /veranstaltungen/
-destination: https://gruene-wuerzburg.de/termine/
+destination: https://jessica-hecht.de/termine/diskussionsabend-mutmacherinnen/
 canonical: false
 sitemap: false
 ---
